--- a/src/main/webapp/WEB-INF/static/css/login.css
+++ b/src/main/webapp/WEB-INF/static/css/login.css
@@ -1,60 +1,64 @@
-@charset "UTF-8"
+@charset "utf-8"
 
 body {
-    background-color: #dfdede;
+	background-color: #dedede;
 }
 
-.form-signin {
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-    box-shadow: 0 0 10px 4px rgba(0, 0, 0, .04);
-    margin-top: 5%;
-}
-
-#info>form>input {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    height: 40px;
-}
-
-#sync {
-    text-align: center;
-    margin-top: 5%;
-    color: gray;
+#woyun {
+	text-align: center;
+	margin-top: 5%;
+	color: gray;
 }
 
 h1 {
-    font-size: 50px;
-    color: #0162c2;
+	font-size: 50px;
+	color: #0162c2;
 }
 
 h2 {
-    color: gray;
-    margin-bottom: 30px;
+	color: gray;
+	margin-bottom: 30px;
 }
 
 #info {
-    margin: 0px auto;
-    margin-top: 5%;
-    width: 350px;
-    height: 310px;
-    background-color: #EBEBEB;
+	margin: 0px auto;
+	margin-top: 5%;
+	width: 350px;
+	height: 310px;
+	background-color: #ebebeb;
+}
+
+#info>form>input {
+	margin-top: 10px;
+	margin-bottom: 5px;
+	height: 40px;
+}
+
+.signin {
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
+	box-shadow: 0 0 10px 4px rgba(0, 0, 0, .04);
+	margin-top: 5%;
+}
+
+.signin input:hover {
+	border-color: #428bca;
 }
 
 #fm {
-    max-width: 350px;
-    max-height: 310px;
-    min-height: 310px;
+	max-width: 350px;
+	max-height: 310px;
+	min-height: 310px;
 }
 
 #login {
-    margin-top: 8%;
-    height: 50px;
+	margin-top: 8%;
+	height: 50px;
 }
 
-.errormsg {
-    color: read!important;
-    font-size: 12px;
-    display: none;
+.errmsg {
+	color: read!important;
+	font-size: 12px;
+	display: none;
 }
