--- a/src/main/webapp/WEB-INF/static/css/register.css
+++ b/src/main/webapp/WEB-INF/static/css/register.css
@@ -1,21 +1,65 @@
-.containerBox {
-	width: 324px;
-	margin: auto;
+@charset "utf-8"
+
+body {
+	background-color: #dedede;
 }
-.signup-title{
+
+#woyun {
 	text-align: center;
-	margin: 70px 0 50px 0;
+	margin-top: 5%;
+	color: gray;
 }
-.item{
+
+h1 {
+	font-size: 50px;
+	color: #0162c2;
+}
+
+#info {
+	margin: 0px auto;
+	margin-top: 5%;
+	width: 350px;
+	background-color: #ebebeb;
+}
+
+#info>form>div {
+	margin-top: 10px;
+	margin-bottom: 5px;
+	height: 40px;
+}
+
+.item {
 	margin: 4px 0;
 }
-.item input{
+
+.item input {
 	height: 40px !important;
 }
-.item input:hover{
+
+.item input:hover {
 	border-color: #428bca;
 }
-.error{
-	color:red;
-	margin-left:2px;
+
+.signup {
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
+	box-shadow: 0 0 10px 4px rgba(0, 0, 0, .04);
+	margin-top: 5%;
+}
+
+#fm {
+	max-width: 350px;
+	max-height: 400px;
+	min-height: 310px;
+}
+
+#register {
+	margin-top: 8%;
+	height: 50px;
+}
+
+.error {
+	color: read;
+	margin-left: 2px;
 }
