--- a/resources/static/system/css/loginbase.css
+++ b/resources/static/system/css/loginbase.css
@@ -72,7 +72,8 @@ a{ text-decoration:none; }
 /* header */
 #header{
 	height:60px;
-	background: #095db1;
+	/* background: #095db1; */
+	background:#00868B;
 }
 #header .container-new{
 	height:60px;
@@ -86,9 +87,21 @@ a{ text-decoration:none; }
 	display: block;
 	height:60px;
 	width:200px;
-	overflow: hidden;
-	background: url(../../common/images/Cloudlogo.png) no-repeat center center;
-	text-indent: 100%;
+	/* overflow: hidden; */
+	/* background: url(../../common/images/Cloudlogo.png) no-repeat center center; */
+	/* text-indent: 100%; */
+}
+#header .logdiv{
+	background:url('../../common/images/cloude-9.png') center center no-repeat; 
+	height:60px;
+	line-height:60px;
+	font-weight:400;
+	font-size:1.6rem;
+	color:white;
+	margin-left:15px;
+	background-position-x:inherit;
+	background-size:contain;
+	text-align:center;
 }
 #header .container-new .login-area{
 	float:right;
@@ -105,6 +118,7 @@ a{ text-decoration:none; }
 	line-height: 60px;
 	font-size: 14px;
 	cursor: pointer;
+	
 }
 #header .container-new .login-area a:hover{
 	background-color: #3a7dc1;
@@ -139,22 +153,25 @@ a{ text-decoration:none; }
 .containerBg{
 	width:100%;
 	height:100%;
-	background:url(../images/s-regbg.jpg) no-repeat 0 0;
-	background-size:100% 82%;
+	/* background:url(../images/back.jpg) no-repeat 0 0; */
+	/* background:url(../images/back.jpg);
+	 background-repeat: repeat-x; 
+	 background-positon: 100%,100%;
+	background-size:100% 82%; */
 	overflow:hidden;
 }
 .containerBox{
-	width:760px;
-	height:400px;
+	width:290px;
+	height:330px;
 	background-color:#fff;
 	margin:0 auto;
-	margin-top:50px;
+	margin-top:80px;
 	padding:50px 70px;
 	overflow:hidden;
 	position:relative;
     border: solid 1px #e4e8ee;
     -webkit-box-shadow: 3px 10px 10px #e4e8ee;
-    box-shadow: 3px 10px 10px #e4e8ee;
+    box-shadow: 1px 1px 10px #e4e8ee;
 }
 .regContainerBox{
 	height:460px;
@@ -162,6 +179,7 @@ a{ text-decoration:none; }
 .reg-title{
 	font-weight:normal;
 	margin-bottom:20px;
+	text-align:center;
 }
 
 /* input */
@@ -257,10 +275,26 @@ a{ text-decoration:none; }
 }
 .forgetPwd{
 	vertical-align:middle;
-	margin-left:140px;
+	margin-left:100px;
 	color:#333;
 }
+.register{
+	vertical-align:middle;
+	color:blue;
+}
+.login{
+	vertical-align:middle;
+	margin-left:160px;
+	margin-top:20px;
+	color:blue;
+}
 .forgetPwd:hover{
+	text-decoration:underline;
+}
+.register:hover{
+	text-decoration:underline;
+}
+.login:hover{
 	text-decoration:underline;
 }
 #remember-me{
