--- a/resources/static/system/css/base.css
+++ b/resources/static/system/css/base.css
@@ -300,12 +300,10 @@ div {
 	margin-top:30px;
 }
 .container-header, .ui-header{
-	height:60px;
-	line-height:60px;
+	height:50px;
+	line-height:50px;
 	width:100%;
 	background:#00868B;
-	/* background-color: #095db1; */
-	/* background:#29543a; */
 	color:#ffffff;
 }
 .container-header{
@@ -352,11 +350,11 @@ div {
 	color:#fff;
 }
 
-/** 左菜单 **/
+/** 左菜单 */
 .logo{
     background:url('../../common/images/cloude-9.png') center center no-repeat; 
     width:200px;
-    height:60px;
+    height:50px;
     margin:0 72px 0px 45px;
     font-weight:400;
 	font-size:2.6rem;
@@ -366,7 +364,7 @@ div {
 	text-align:center;
 }
 .lbar{
-    width:210px;
+    width:180px;
     border-right: 1px solid #e4e8ee;
     height:100%;
     top:0;
@@ -376,7 +374,7 @@ div {
     overflow-y:auto; /*设置position为relative,加上overflow:auto;文档模式在IE8下不兼容*/
     overflow-x:hidden;
 }
-.lbar, .lbar-title-name{background-color:#F8F8FF;}
+.lbar, .lbar-title-name{background-color:#f0f3f5;}
 .diver-bottom{
 	  height: 0;
 	  line-height: 0;
@@ -410,7 +408,7 @@ div {
 	margin-left:10px;
 }
 .lbar-link li{
-    line-height:61px;
+    line-height:50px;
     cursor:pointer;
 }
 .lbar-link li a{
@@ -419,7 +417,6 @@ div {
     color:#575757;
     font-size:16px;
 	font-size:1.6rem;
-	border-right:3px #8B8B7A solid;
 }
 .lbar-link li.active a, .lbar-link li a:hover{
 	/* background-color:#f0f3f5; */
@@ -428,8 +425,8 @@ div {
 }
 .lbar-link li.active a i, .lbar-link li a:hover i{color:#000;}
 .lbar-link li a i{
-    margin-left:45px;
-	color:#a6a3a3;
+    margin-left:25px;
+	color:#575757;
 	font-size:18px;
 }
 .lbar-app{
@@ -482,7 +479,7 @@ div {
     width: auto;
 	background-color: #fff;
 	position: absolute;
-	top: 60px;
+	top: 50px;
     left: 0;
     right:0;
 	z-index: 8;
@@ -490,10 +487,33 @@ div {
 }
 .rmain-main{
 	position:absolute;
-	left:210px;
+	left:180px;
 	right:0;
 	bottom:0;
 	top:0;
+}
+/* 设置滚动条的样式 google */
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+}
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius:999px;
+	-moz-border-radius:999px;
+    -webkit-border-radius:999px;
+}
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+    background: rgba(137,137,137,0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    border-radius:999px;
+	-moz-border-radius:999px;
+    -webkit-border-radius:999px;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    background:rgba(183,183,41,0.5);
 }
 .rmain-top{
     height:auto;
@@ -1842,6 +1862,9 @@ button:focus{
 }
 .tipMsgContent div{
 	margin-top:12px;
+}
+.doc-id-bar .active{
+	background:#DEDEDE;
 }
 
 
