--- a/resources/static/system/css/bodyfile.css
+++ b/resources/static/system/css/bodyfile.css
@@ -237,3 +237,35 @@ div {
 	position:absolute;
 	bottom:25px;
 }
+.file {
+    position: relative;
+    display: inline-block;
+    background: #fff;
+    border: 1px solid #B5B5B5;
+    border-radius: 4px;
+    padding: 4px 10px;
+    overflow: hidden;
+   color: #400000;
+    text-decoration: none;
+    text-indent: 0;
+    line-height: 20px;
+    top:10px;
+    margin-right:5px;
+    cursor:pointer;
+}
+.file input {
+    position: absolute;
+    font-size: 100px;
+    right: 0;
+    top: 0;
+    opacity: 0;
+    width:100%;
+    height:100%;
+    cursor:pointer;
+}
+.file:hover {
+   /*  background: #AADFFD; */
+    /* border-color: #78C3F3; */
+    color: #400000;
+    text-decoration: none;
+}
