--- a/resources/static/system/css/bodyfile.css
+++ b/resources/static/system/css/bodyfile.css
@@ -269,3 +269,15 @@ div {
     color: #400000;
     text-decoration: none;
 }
+/* 上传文件UI   */
+.upload-pack{
+	width:280px;
+	height:240px;
+	background:#f0f3f5;
+	z-index:99;
+	position:absolute;
+	bottom:20px;
+	right:35px;
+	overflow:hidden;
+	box-shadow: 1px 1px 2px 2px #888888;
+}
